--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav>
         <div id="byId">
-            <img src="img/aigle.png" alt="">
+            <img src="aigle.png" alt="">
         </div>
         <ul class="menu">
             <li>Miaou</li>
